Migrate IRecipeProcessor